# signals-engine

./: .gitignore  README.md  dashboard.html  pyproject.toml
scripts/: download_data.py
src/signals_engine/: __init__.py  app.py  cli.py
src/signals_engine/rank/: backtest.py  crosssection.py
src/signals_engine/report/: plots.py
src/signals_engine/signals/: composite.py  fundamentals.py  momentum.py  volatility.py
tests/: conftest.py  test_backtest.py  test_rank.py  test_signals.py
